--- a/Mp3/MP3_Final/MP3_Final.csproj
+++ b/Mp3/MP3_Final/MP3_Final.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
+    <PackageReference Include="TagLibSharp" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
